Chat, SSL with docker, some fixes, external nomnoml, IntelliJ plugin